cabal-version:  >= 1.10
name:           arbor-monad-counter
version:        2.0.1
description:    Please see the README on Github at <https://github.com/arbor/arbor-monad-counter#readme>
category:       Services
homepage:       https://github.com/arbor/arbor-monad-counter#readme
bug-reports:    https://github.com/arbor/arbor-monad-counter/issues
author:         Arbor Networks
maintainer:     mayhem@arbor.net
copyright:      Arbor Networks
license:        MIT
license-file:   LICENSE
build-type:     Simple
Synopsis:       Counter library for submitting metrics to a backend such as datadog
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/arbor/arbor-monad-counter

library
  exposed-modules:
      Arbor.Monad.Counter
      Arbor.Monad.Counter.Type
  other-modules:
      Paths_arbor_monad_counter
  hs-source-dirs:
      src
  default-extensions: BangPatterns FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving MultiParamTypeClasses OverloadedStrings TupleSections
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , containers
    , generic-lens
    , lens
    , mtl
    , resourcet
    , stm
    , transformers
  default-language: Haskell2010

test-suite arbor-monad-counter-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-tools: hspec-discover
  other-modules:
      Arbor.Monad.Counter
      Arbor.Monad.Counter.Type
      Paths_arbor_monad_counter
  hs-source-dirs:
      test
      src
  default-extensions: BangPatterns FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving MultiParamTypeClasses OverloadedStrings TupleSections
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      arbor-monad-counter
    , base >=4.7 && <5
    , containers
    , generic-lens
    , hedgehog
    , hspec
    , hw-hspec-hedgehog
    , lens
    , mtl
    , resourcet
    , stm
    , transformers
  default-language: Haskell2010
